# newomega-polkadot-hybrid

newomega-capacitor-polkadot/: README.md
newomega-capacitor-polkadot/client/: README.md  build.sh  capacitor.config.json  package.json
newomega-capacitor-polkadot/client/android/app/: build.gradle
newomega-capacitor-polkadot/client/config/jest/: babelTransform.js
newomega-capacitor-polkadot/client/coverage/: clover.xml  coverage-final.json  lcov.info
newomega-capacitor-polkadot/client/coverage/lcov-report/: index.html
newomega-capacitor-polkadot/client/coverage/lcov-report/definitions/: Modules.js.html  OmegaDefaults.js.html  Ships.js.html  index.html
newomega-capacitor-polkadot/client/coverage/lcov-report/facades/: ContractFacade.js.html  Deployer.js.html  index.html
newomega-capacitor-polkadot/client/ios/App/App/: Info.plist
newomega-capacitor-polkadot/client/ios/App/App.xcodeproj/: project.pbxproj
newomega-capacitor-polkadot/client/public/: index.html  manifest.json
newomega-capacitor-polkadot/client/public/assets/diamond/: scene.gltf
newomega-capacitor-polkadot/client/scripts/: genconfig.js
newomega-capacitor-polkadot/client/src/: App.css  App.js  App.test.js  ContractFacade.test.js  OmegaApp.js  index.css
newomega-capacitor-polkadot/client/src/config/: config.json
newomega-capacitor-polkadot/client/src/definitions/: Common.js  CraftAssets.js  Modules.js  OmegaDefaults.js  Planets.js  Ships.js
newomega-capacitor-polkadot/client/src/facades/: ContractFacade.js  Deployer.js
newomega-capacitor-polkadot/client/src/ink/: metadata.json  newomegadelegator.contract  newomegadelegator.wasm
newomega-capacitor-polkadot/client/src/ink/newomega/: metadata.json  newomega.contract  newomega.wasm
newomega-capacitor-polkadot/client/src/scenes/: Combat.css  Combat.js  CompactShipSelection.css  CompactShipSelection.js  ModuleCraft.css  ModuleCraft.js  ShipSelection.css  ShipSelection.js
newomega-capacitor-polkadot/client/src/ui/: LoginScreen.css  LoginScreen.js  Settings.css  Settings.js
newomega-capacitor-polkadot/contracts/: Cargo.toml  README.md  build.sh  deploy.sh  facade.rs
newomega-capacitor-polkadot/contracts/newomega/: Cargo.toml  README.md  newomega.rs
newomega-capacitor-polkadot/contracts/newomegagame/: Cargo.toml  README.md  newomegagame.rs
newomega-capacitor-polkadot/contracts/newomegaindustrial/: Cargo.toml  README.md  newomegaindustrial.rs
newomega-capacitor-polkadot/contracts/newomegamarket/: Cargo.toml  newomegamarket.rs
newomega-capacitor-polkadot/contracts/newomegaquests/: Cargo.toml  newomegaquests.rs
newomega-capacitor-polkadot/contracts/newomegaranked/: Cargo.toml  README.md  newomegaranked.rs
newomega-capacitor-polkadot/contracts/newomegastorage/: Cargo.toml  README.md  newomegastorage.rs
newomega-capacitor-polkadot/contracts/newomegatokens/: Cargo.toml  README.md  newomegatokens.rs
newomega-capacitor-polkadot/contracts/newomegauniverse/: Cargo.toml  README.md  newomegauniverse.rs
newomega-capacitor-polkadot/contracts/newomegauniversestorage/: Cargo.toml  newomegauniversestorage.rs
(+82 files in other folders)
